// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading with no study 1`] = `
<div
  className="locked-ends locked-sides floating"
>
  <div
    className="floating__item"
  >
    <div
      className="loader_9h6gj"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`renders studies content 1`] = `
<div>
  <div
    className="overlay-color--000 background--light-primary"
  >
    <div
      className="overlay-color--000"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
    />
    <style>
      
    .overlay-color--000:after{
      background: linear-gradient(
        to bottom, rgba(0, 0, 0, 0) 0%, #000 100%
      );
    }
  
    </style>
    <style>
      
    .overlay-color--000 {
      background-color: #000;
    }
  
    </style>
    <section
      className="text-light-primary hard-ends soft-double-sides@palm-wide"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<h1>study</h1>",
          }
        }
      />
    </section>
  </div>
</div>
`;

exports[`renders with no image 1`] = `
<div>
  <div
    className="overlay-color--000 background--light-primary"
  >
    <div
      className="overlay-color--000"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
    />
    <style>
      
    .overlay-color--000:after{
      background: linear-gradient(
        to bottom, rgba(0, 0, 0, 0) 0%, #000 100%
      );
    }
  
    </style>
    <style>
      
    .overlay-color--000 {
      background-color: #000;
    }
  
    </style>
    <section
      className="text-light-primary hard-ends soft-double-sides@palm-wide"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<h1>study</h1>",
          }
        }
      />
    </section>
    <div
      className="one-whole text-center soft-bottom"
    >
      <a
        className="btn--light plain"
        href="https://newspring.cc/studies/study"
        onClick={[Function]}
      >
        View Study
      </a>
    </div>
  </div>
</div>
`;
